Change footer to text-align as opposed to unnecessary flexbox

--- a/styles.css
+++ b/styles.css
@@ -219,8 +219,7 @@ p {
 
 .footer {
   color: white;
-  display: flex;
-  justify-content: center;
   padding: 32px;
   background-color: #1F2937;
+  text-align: center;
 }
